# comp3005a3-1

./: README.md  docker-compose.yml  initdb.sql  pyproject.toml  teardown.sh
comp3005a3/: db_obj.py  functions.py  main.py
