[project]
name = "comp3005a3-1"
version = "0.1.0"
description = ""
authors = [
    {name = "borketh",email = "does.not.kompute@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary] (>=3.2.12,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
